--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "hoek": "^5.0.3",
+    "jquery": "^3.3.1",
     "lodash": "^4.17.10",
     "prop-types": "^15.6.0",
     "react": "^16.2.0",
@@ -11,6 +12,7 @@
     "react-redux": "^5.0.7",
     "react-scripts": "1.1.0",
     "redux": "^3.7.2",
+    "redux-form": "^7.3.0",
     "redux-thunk": "^2.2.0"
   },
   "scripts": {
