--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react-scripts": "1.1.0",
     "redux": "^3.7.2",
     "redux-form": "^7.3.0",
-    "redux-thunk": "^2.2.0"
+    "redux-thunk": "^2.2.0",
+    "uikit": "^3.0.0-rc.6"
   },
   "scripts": {
     "start": "react-scripts start",
