--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-redux": "^5.0.7",
     "react-scripts": "1.1.0",
     "react-select": "^2.0.0",
+    "react-swipeable-views": "^0.12.4",
     "redux": "^3.7.2",
     "redux-form": "^7.3.0",
     "redux-thunk": "^2.2.0",
