--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "redux": "^3.7.2",
     "redux-form": "^7.3.0",
     "redux-thunk": "^2.2.0",
-    "uikit": "^3.0.0-rc.6"
+    "uikit": "^3.0.0-rc.6",
+    "url-parse": "^1.4.3"
   },
   "scripts": {
     "start": "react-scripts start",
