--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
   "dependencies": {
     "@material-ui/core": "^1.4.2",
     "chart.js": "^2.7.2",
+    "deep-extend": "^0.5.1",
     "hoek": "^5.0.3",
     "lodash": "^4.17.10",
     "prop-types": "^15.6.0",
+    "randomatic": "^3.0.0",
     "react": "^16.2.0",
     "react-chartjs-2": "^2.7.2",
     "react-dom": "^16.2.0",
