--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "deep-extend": "^0.5.1",
     "hoek": "^5.0.3",
     "lodash": "^4.17.10",
+    "macaddress": "^0.2.9",
+    "nodejs": "0.0.0",
     "prop-types": "^15.6.0",
     "randomatic": "^3.0.0",
     "react": "^16.2.0",
