--- a/package.json
+++ b/package.json
@@ -3,27 +3,28 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^1.4.2",
-    "chart.js": "^2.7.2",
+    "@material-ui/core": "^3.3.1",
+    "chart.js": "^2.7.3",
     "cryptiles": "^4.1.2",
     "deep-extend": "^0.5.1",
     "hoek": "^5.0.3",
     "lodash": "^4.17.10",
     "macaddress": "^0.2.9",
+    "material-ui": "^0.20.2",
     "nodejs": "0.0.0",
     "prop-types": "^15.6.0",
-    "randomatic": "^3.0.0",
-    "react": "^16.2.0",
+    "randomatic": "^3.1.1",
+    "react": "^16.6.0",
     "react-chartjs-2": "^2.7.2",
-    "react-dom": "^16.2.0",
+    "react-dom": "^16.6.0",
     "react-redux": "^5.0.7",
     "react-scripts": "1.1.0",
-    "react-select": "^2.0.0",
+    "react-select": "^2.1.1",
     "react-swipeable-views": "^0.12.4",
     "redux": "^3.7.2",
     "redux-form": "^7.3.0",
     "redux-thunk": "^2.2.0",
-    "uikit": "^3.0.0-rc.6",
+    "uikit": "^3.0.0-rc.20",
     "url-parse": "^1.4.3"
   },
   "scripts": {
